# hapi-pipelines-prod

./: CHANGELOG.md  Dockerfile  dump_views.sh  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: db_export.yaml  publish.yaml  run-python-tests.yaml
database/csv/: admin1_view.hash  admin2_view.hash  conflict_event_view.hash  currency_view.hash  data_availability_view.hash  dataset_view.hash  food_price_view.hash  food_security_view.hash  funding_view.hash  humanitarian_needs_view.hash  idps_view.hash  location_view.hash  national_risk_view.hash  operational_presence_view.hash  org_type_view.hash  org_view.hash  patch_view.hash  population_view.hash  poverty_rate_view.hash  rainfall_view.hash  refugees_view.hash  resource_view.hash  returnees_view.hash  sector_view.hash  wfp_commodity_view.hash  wfp_market_view.hash
saved_data/: 3b5e8a5c-e4e0-4c58-9c58-d87e33520e08.json
tests/: org_mappings.py  test_main.py  test_mappings.py
tests/fixtures/input/: 01679d5e-9cf1-45a4-a212-662a2309780c.json  0fb9ee35-c701-4f26-af4c-0ee1222e8330.json  1a770477-7083-41bb-a88a-54f7b857c297.json  2e53bdcb-c2d1-4e2b-908d-cb1ae473755f.json  31579af5-3895-4002-9ee3-c50857480785.json  32d0365c-d513-4721-8d66-1b19b12c4b08.json  38af8a10-7dee-47dc-bd00-2db8c062ba9c.json  3a4d0513-9aeb-4177-9f6d-448c7e740463.json  3b5e8a5c-e4e0-4c58-9c58-d87e33520e08.json  3e6bfc98-f837-495d-b8de-71e5ac026f59.json  41ae017f-7e8c-4a10-93a6-30cded3260f3.json  41cfeb67-7eee-434a-8687-0670eb50ebb3.json  42b16840-3a56-4a20-9314-7aa171f1136c.json  45fceb73-64f9-44ad-8ce3-bc80c14c2897.json  49f93973-5f8e-4a89-9bbb-43db497c7255.json  50562108-9a07-42bc-964e-de17a263a153.json  531fe931-4b87-43e9-ae4c-a3e25a2bd388.json  64922a4a-2f68-49bc-a4d2-1034108350c8.json  cod-ps-nga.json  (+106 more)
(+45 files in other folders)
