#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hapi-pipelines"
description = "HAPI"
authors = [{name = "Michael Rans", email = "rans@email.com"}]
license = {text = "MIT"}
keywords = ["HDX", "HAPI"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.11"

dependencies = [
    "hapi-schema>= 0.9.17",
    "hdx-python-api>= 6.5.2",
    "hdx-python-country>= 3.9.8",
    "hdx-python-database[postgresql]>= 1.3.7",
    "hdx-python-scraper>= 2.6.5",
    "hdx-python-utilities>= 3.9.5",
    "libhxl",
    "sqlalchemy"
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hapi-pipelines"

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-cov", "pytest-mock"]
dev = ["pre-commit"]
